Add refresh token route
