# internal/handler/v1/auth_dto.go
@@ -6,5 +6,15 @@ type LoginRequest struct {
 }
 
 type LoginResponse struct {
-	Token string `json:"token"` // bearer token
+	Token        string `json:"token"`         // bearer token
+	RefreshToken string `json:"refresh_token"` // refresh token
+}
+
+type RefreshTokenRequest struct {
+	RefreshToken string `json:"refresh_token"`
+}
+
+type RefreshTokenResponse struct {
+	Token        string `json:"token"`         // bearer token
+	RefreshToken string `json:"refresh_token"` // refresh token
 }
